cleanup: Remove all temporary documentation and non-functional files
- Deleted 65+ temporary documentation files from project root
  (FASE*, README_DEPLOYMENT, DEMO_INSTRUCTOR, SOLUCION_COMPLETA, etc)
- Removed temporary deployment scripts (PowerShell, bash)
- Removed old database initialization scripts
- Removed Postman collection files
- Removed Railway platform configuration files
- Removed Docker Ubuntu PostgreSQL compose file (not needed for server)
- Removed temporary README files from BACKEND directory
- Kept only functional code: BACKEND/, FRONTEND/, docker-compose.yml

This cleanup focuses the repository on the actual codebase and removes
development iteration documentation that cluttered the project structure.

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>